# pricedesk

./: .gitignore  .pre-commit-config.yaml  .prettierrc  CNAME  README.md  faq.html  index.html  package.json  pyproject.toml  site.webmanifest  sitemap.xml  svelte.config.js  vite-manifest.json
.github/workflows/: main.yml
_app/: version.json
_app/immutable/: start-4f966b4f.js  start-51b5a89b.js  start-76ab2419.js  start-7hTDwTVD.js  start-9bcf7ade.js  start-9df18c0f.js  start-OcjuZLm3.js  start-e1a9b45d.js  start-f3806e88.js
_app/immutable/assets/: 2-J-OgZtpU.css  3-Pvtl3OjB.css  _layout-62c67cc6.css  _layout-Bw7haZDX.css  _page-2140825f.css  _page-ba96d0e8.css
_app/immutable/chunks/: 0-273128e2.js  0-476e1003.js  0-4e778e14.js  0-7978c404.js  0-8c4764b1.js  0-9bf028e3.js  0-Blk29D2R.js  0-CySJRyYM.js  0-ba246c45.js  1-160e6eb2.js  1-DHgbYGDd.js  2-62380d65.js  2-6e4152ef.js  2-734a80fe.js  2-BsfPhnnr.js  2-CPxJ9DVI.js  2-a105e331.js  2-a55bb9d1.js  2-c0a5192a.js  2-ce94a9d3.js  3-3343030c.js  3-4780bb45.js  (+60 more)
app/: constants.py  download_data.py  generate_average.py  generate_data.py  generate_inflation_rate.py  generate_map_data.py  generate_stats_bar.py  helper.py  utils.py
data/: listing.csv  listing.json  listings.csv.tmp  listings.json
data/dl/: listing.json
data/raw/: duala.csv  redlight.csv  waterside.csv
data/rl/: listing.json
data/ws/: listing.json
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.html
frontend/static/: site.webmanifest
src/styles/: mixin.scss  variables.scss
(+70 files in other folders)
