[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Solo Dolley <solodolley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gdown = "^4.5.3"
loguru = "^0.6.0"
tenacity = "^8.1.0"
pydantic = "^1.10.2"
humanize = "^4.4.0"
pandas = "^1.5.1"
numpy = "^1.23.4"

[tool.poetry.scripts]
download = "app.download_data:main"
generate = "app.generate_data:main"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
